--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.my-body {
+    width: 300px;
+    background-color: #57cea0;
+}
+
+.my-ul {
+    padding-inline-start: 15px
+} 
+ 
  .bounce-top {
 	-webkit-animation: bounce-top 0.9s both;
 	        animation: bounce-top 0.9s both;
