Add auto open checkbox
- Can now select to automatically open student dropbox folder every time the review page is loaded.
- Add hover effect to review dashboard table, for better readability.
- Store checked value to chrome local storage.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .bounce-top {
         -webkit-animation: bounce-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: bounce-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: bounce-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 
@@ -121,9 +121,8 @@
 }
 
 
-
 /* Adds hover effect to reviewer dashboard table */
-tr:hover {
+.tr-hover:hover {
         background-color: rgb(113 213 175 / 45%) !important;
 }
 
@@ -144,37 +143,42 @@ tr:hover {
  * animation slide-in-top
  * ----------------------------------------
  */
- @-webkit-keyframes bounce-top {
+@-webkit-keyframes bounce-top {
         0% {
-          -webkit-transform: translateY(-1000px);
-                  transform: translateY(-1000px);
+                -webkit-transform: translateY(-1000px);
+                transform: translateY(-1000px);
                 opacity: 0;
         }
+
         50% {
-                opacity: 0;    
+                opacity: 0;
         }
+
         100% {
-          -webkit-transform: translateY(0);
-                  transform: translateY(0);
-          opacity: 1;
+                -webkit-transform: translateY(0);
+                transform: translateY(0);
+                opacity: 1;
         }
-      }
-      @keyframes bounce-top {
+}
+
+@keyframes bounce-top {
         0% {
-          -webkit-transform: translateY(-1000px);
-                  transform: translateY(-1000px);
-          opacity: 0;
+                -webkit-transform: translateY(-1000px);
+                transform: translateY(-1000px);
+                opacity: 0;
         }
-          50% {
-                opacity: 0;    
+
+        50% {
+                opacity: 0;
         }
+
         100% {
-          -webkit-transform: translateY(0);
-                  transform: translateY(0);
-          opacity: 1;
+                -webkit-transform: translateY(0);
+                transform: translateY(0);
+                opacity: 1;
         }
-      }
-      
+}
+
 
 
 .slide-in-left {
